--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-# Root logger option
+# root
 log4j.rootLogger=INFO, stdout, file
 
 # console
@@ -12,6 +12,6 @@ log4j.appender.file=org.apache.log4j.RollingFileAppender
 #not sure about exact file location
 log4j.appender.file.File=${CATALINA_HOME}/logs/logs.log
 log4j.appender.file.MaxFileSize=1MB
-log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.MaxBackupIndex=30
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
