Artifact ID was set for travis deployment

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,8 @@
     </dependencies>
     <build>
         <plugins>
+            <!-- artifact id for travis deployment -->
+            <finalName>NC_4_2017_1</finalName>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
