--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,9 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.version>4.3.5.RELEASE</spring.version>
     </properties>
+
     <repositories>
         <repository>
             <id>central</id>
@@ -27,6 +29,7 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
+
     <dependencies>
         <dependency>
             <groupId>com.oracle</groupId>
@@ -71,12 +74,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.3.5.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>4.3.5.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -99,6 +102,7 @@
             <version>3.2.5</version>
         </dependency>
     </dependencies>
+
     <build>
         <!-- artifact id for travis deployment -->
         <finalName>NC_4_2017_1</finalName>
