--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>hamcrest-library</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
     </dependencies>
 
     <build>
